# SurvivorGame

eric/.claude/: settings.local.json
eric/2D_survivalGame/: CLAUDE.md  CMakeLists.txt  Makefile  dist.bat  push.bat  run.bat
eric/2D_survivalGame/assets/data/: loot_tables.json  objects.json
eric/2D_survivalGame/build_msvc/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
eric/2D_survivalGame/src/core/: collision.h  game.cpp  game.h  game_data.cpp  game_data.h  main.cpp
eric/2D_survivalGame/src/entities/: player.cpp  player.h
eric/2D_survivalGame/src/world/: world.cpp  world.h
eric/2D_survivalGame/src/world/rivers/: river_system.cpp  river_system.h  spring_river_system.cpp  spring_river_system.h
eric/2D_survivalGame/src/world/terrain/: chunk.cpp  chunk.h  tile.h
eric/Python/: Cyclic.py  Hook.py  Triangle.py  Yeah.py  graph.html  points.json
